--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <style>
+    /*webpack has bugs to complile keyframes. Add them here to bypass webpack*/
+    @keyframes cdk-text-field-autofill-start {from {}  to {}}
+    @keyframes cdk-text-field-autofill-end {from {}  to {}}
+  </style>
 </head>
 <body>
   <app-root></app-root>
