1. Logon waiting circle 2. Redis session store

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <style>
-    /*webpack has bugs to complile keyframes. Add them here to bypass webpack*/
+    /*webpack has bugs to compile keyframes. Add them here to bypass webpack*/
     @keyframes cdk-text-field-autofill-start {from {}  to {}}
     @keyframes cdk-text-field-autofill-end {from {}  to {}}
   </style>
