--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <div style="text-align: center;text-align: center; position:relative; margin-top:100%;">
+    <a href="https://beian.miit.gov.cn/" target="_blank">沪ICP备14041917号-1</a>
+  </div>
 </body>
 </html>
